--- a/src/work-hypergraphs.ipynb
+++ b/src/work-hypergraphs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 155,
    "id": "f41dda39-660f-41cd-b619-af09ec1d5557",
    "metadata": {},
    "outputs": [],
@@ -14,21 +14,13 @@
     "\n",
     "\n",
     "n = 7            # Number of nodes of BH\n",
-    "m = 5            # Number of hyperarcs of BH\n",
-    "multiplicity = 6 # Maximum size of a fibre over BH\n",
-    "\n",
-    "BH = hnx.Hypergraph()   # Generate BH\n",
-    "\n",
-    "for i in range(m):\n",
-    "    k = randint(1, n)  # Number of sources\n",
-    "    sources = sample(range(0, n), k)\n",
-    "    target = randint(0, n)\n",
-    "    add_directed_hyperedge(BH, sources, target, f\"h_{i}\")"
+    "m = 12            # Number of hyperarcs of BH\n",
+    "multiplicity = 6 # Maximum size of a fibre over BH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 156,
    "id": "cfc472dd-37e6-431f-8155-437c68c86f41",
    "metadata": {},
    "outputs": [],
@@ -51,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 157,
    "id": "bbef46ba-c229-4b41-8a76-12bbe095000b",
    "metadata": {},
    "outputs": [],
@@ -62,15 +54,18 @@
     "        The resulting graph has:\n",
     "        - nodes are named (x,i) where x is a node of BH and i is in range(k), k being the size of the fiber over k\n",
     "        - hyperarcs are named h_{i} where h is a hyperarc of BH and i is in range(k), k being the size of the fiber over the target of h.\n",
-    "        The function returns the lifted hypergraph, and a dictionary mapping the nodes of the result to the nodes of the original graph\n",
+    "        The function returns the lifted hypergraph, and a dictionary mapping the nodes (as strings) of the \n",
+    "        result to the nodes of the original graph.\n",
     "    \"\"\"\n",
     "    map = {}\n",
     "    B, dd = hg2g(BH) # Lift every node\n",
+    "    resdd = {}\n",
     "    lifting = {}\n",
     "    for x in B.nodes():\n",
     "        if dd[x] == 0: # Node, liftable\n",
     "            lifting[x]=list(range(randint(1, multiplicity)))   # Multiplicity of nodes\n",
-    "\n",
+    "            for i in lifting[x]:\n",
+    "                    resdd[str((x, i))] = x\n",
     "    H = hnx.Hypergraph() # Generate H appropriately\n",
     "    for h in BH.edges():\n",
     "        name = str(h)\n",
@@ -82,161 +77,155 @@
     "                s_lift = sample(lifting[s], 1)[0]\n",
     "                ss += [(s, s_lift)]\n",
     "            add_directed_hyperedge(H, ss, (target, t), \"{}_{}\".format(name, t))\n",
-    "    return H\n"
+    "    return H, resdd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 158,
+   "id": "5f8ee0eb-f034-4841-a2be-bb2aa045648e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nodes2id(H):\n",
+    "    \"\"\"\n",
+    "        Returns a dictionary with one entry for every node of H, which is a monotone minimal perfect hashing. \n",
+    "        The entry related to node x has key str(x).\n",
+    "    \"\"\"\n",
+    "    s = enumerate(sorted([str(x) for x in H.nodes()]))\n",
+    "    return {t[1]: t[0] for t in s}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "id": "783637e4-5937-4f2f-9b24-17aff440db1c",
    "metadata": {},
    "outputs": [],
    "source": [
     "BH = gen_hyper(3,7)\n",
-    "H = left_hyper(BH,3)"
+    "H, dd = left_hyper(BH,3)\n",
+    "\n",
+    "idBH = nodes2id(BH)       # Nodes of BH are mapped to numbers (ids)   \n",
+    "idH = nodes2id(H)        # Nodes of H are mapped to numbers (ids)\n",
+    "idH2B = [idBH[str(dd[x])] for x in [{v: k for k,v in idH.items()}[i] for i in range(len(idH))]]\n",
+    "                         # Maps each id of H to the corresponding id of BH"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "5f8ee0eb-f034-4841-a2be-bb2aa045648e",
+   "execution_count": 160,
+   "id": "09517217-b978-4f13-96fa-c0e2267d8259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_for(H, idH):\n",
+    "    \"\"\"\n",
+    "        Returns the model for the hypergraph H, using idH for ids (see nodes2id).\n",
+    "        This model contains len(idH) variables and equations.\n",
+    "        Let y[i] denote the i-th variable. \n",
+    "        Let x be a node of H. Then y'[idH[x]] is obtained as follows: for every \n",
+    "        hyperarc h with target x, you take the product of y[s] for all sources s of x.\n",
+    "        You sum these products\n",
+    "    \"\"\"\n",
+    "    def model(y, t):\n",
+    "        res = [0 for x in range(len(idH))]\n",
+    "        for h in H.edges():\n",
+    "            target = idH[str(h.props['target'])]\n",
+    "            sources = set([idH[str(x)] for x in h.elements])\n",
+    "            p = 1\n",
+    "            for s in sources:\n",
+    "                p *= y[s]\n",
+    "            res[target] += p\n",
+    "        return res\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "26f7d2c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mmH = model_for(H, idH)\n",
+    "mmB = model_for(BH, idBH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "58e74f75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.integrate import odeint\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "dfa3441f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 6 is out of bounds for axis 0 with size 5",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[163], line 16\u001b[0m\n\u001b[1;32m     13\u001b[0m node \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m6\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# plot results\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(t,[yH[i][node] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(t))])\n\u001b[1;32m     17\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(t,[yB[i][idH2B[node]] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(t))])\n\u001b[1;32m     18\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[163], line 16\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     13\u001b[0m node \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m6\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# plot results\u001b[39;00m\n\u001b[0;32m---> 16\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(t,[\u001b[43myH\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnode\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(t))])\n\u001b[1;32m     17\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(t,[yB[i][idH2B[node]] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(t))])\n\u001b[1;32m     18\u001b[0m plt\u001b[38;5;241m.\u001b[39mxlabel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 6 is out of bounds for axis 0 with size 5"
+     ]
+    }
+   ],
+   "source": [
+    "# initial condition\n",
+    "y0B = range(BH.number_of_nodes())\n",
+    "y0H = [y0B[idH2B[x]] for x in range(H.number_of_nodes())]\n",
+    "\n",
+    "# time points\n",
+    "t = np.linspace(0,20)\n",
+    "\n",
+    "# solve ODE\n",
+    "yB = odeint(mmB, y0B, t)\n",
+    "yH = odeint(mmH, y0H, t)\n",
+    "\n",
+    "# node of H to look at\n",
+    "node = H.number_of_nodes()-\n",
+    "\n",
+    "# plot results\n",
+    "plt.plot(t,[yH[i][node] for i in range(len(t))])\n",
+    "plt.plot(t,[yB[i][idH2B[node]] for i in range(len(t))])\n",
+    "plt.xlabel('time')\n",
+    "plt.ylabel('y(t)')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "42a4c62c-a750-45da-9f4b-aec0f03e7cef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Hypergraph({'h_0_0': Entity(h_0_0,[(1, 0), (2, 2), (0, 0)],{'weight': 1.0, 'props': {'target': (1, 0)}}), 'h_0_1': Entity(h_0_1,[(1, 1), (2, 0), (0, 0)],{'weight': 1.0, 'props': {'target': (1, 1)}}), 'h_1_0': Entity(h_1_0,[(1, 1), (2, 0), (3, 0), (0, 0)],{'weight': 1.0, 'props': {'target': (3, 0)}}), 'h_2_0': Entity(h_2_0,[(1, 0), (2, 1)],{'weight': 1.0, 'props': {'target': (1, 0)}}), 'h_2_1': Entity(h_2_1,[(1, 1), (2, 2)],{'weight': 1.0, 'props': {'target': (1, 1)}}), 'h_3_0': Entity(h_3_0,[(1, 0), (2, 1), (3, 0), (0, 0)],{'weight': 1.0, 'props': {'target': (3, 0)}}), 'h_4_0': Entity(h_4_0,[(1, 0), (2, 0), (3, 0), (0, 0)],{'weight': 1.0, 'props': {'target': (3, 0)}}), 'h_5_0': Entity(h_5_0,[(1, 1), (2, 1), (0, 0)],{'weight': 1.0, 'props': {'target': (0, 0)}}), 'h_6_0': Entity(h_6_0,[(1, 1), (2, 0)],{'weight': 1.0, 'props': {'target': (2, 0)}}), 'h_6_1': Entity(h_6_1,[(1, 0), (2, 1)],{'weight': 1.0, 'props': {'target': (2, 1)}}), 'h_6_2': Entity(h_6_2,[(1, 0), (2, 2)],{'weight': 1.0, 'props': {'target': (2, 2)}})},name=)"
+       "[0, 0, 0, 1, 1, 1, 2, 2]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "H"
+    "idH2B"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09517217-b978-4f13-96fa-c0e2267d8259",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "58e74f75",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "B, dd = hg2g(BH) # Lift every node\n",
-    "lifting = {}\n",
-    "for x in B.nodes():\n",
-    "    if dd[x] == 0: # Node, liftable\n",
-    "        lifting[x]=[i for i in range(randint(1, multiplicity))]   # Multiplicity of nodes\n",
-    "\n",
-    "H = hnx.Hypergraph() # Generate H appropriately\n",
-    "for h in BH.edges():\n",
-    "    name = str(h)\n",
-    "    target = h.props['target']\n",
-    "    sources = set([x for x in h.elements])-set([target])\n",
-    "    for t in lifting[target]:\n",
-    "        ss = []\n",
-    "        for s in sources:\n",
-    "            s_lift = sample(lifting[s], 1)[0]\n",
-    "            ss += [(s, s_lift)]\n",
-    "        add_directed_hyperedge(H, ss, (target, t), \"{}_{}\".format(name, t))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "dfa3441f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_0' =  y_0 * y_1 * y_2 * y_3 * y_4 * y_5 * y_6 + y_0 * y_3 * y_4 * y_14 + y_8 * y_0 * y_1 * y_2 * y_3\n",
-      "y_7' =  y_8 * y_7 * y_9 * y_10 * y_3 * y_5 * y_6 + y_7 * y_3 * y_4 * y_6 + y_8 * y_17 * y_7 * y_3 * y_18\n",
-      "y_11' =  y_11 * y_12 * y_2 * y_13 * y_3 * y_4 * y_5 + y_6 * y_11 * y_3 * y_15 + y_11 * y_2 * y_10 * y_3 * y_4\n",
-      "y_3' =  y_16 * y_11 * y_9 * y_3 * y_5\n",
-      "y_17' =  y_3 * y_17\n",
-      "y_2' =  y_3 * y_2\n",
-      "y_9' =  y_9 * y_3\n",
-      "\n",
-      "{'x_2_0': 'y_0', 'x_4_4': 'y_1', 'x_5_1': 'y_2', 'x_0_0': 'y_3', 'x_1_0': 'y_4', 'x_6_0': 'y_5', 'x_3_3': 'y_6', 'x_2_1': 'y_7', 'x_1_2': 'y_8', 'x_5_2': 'y_9', 'x_4_3': 'y_10', 'x_2_2': 'y_11', 'x_4_1': 'y_12', 'x_3_2': 'y_13', 'x_3_1': 'y_14', 'x_1_1': 'y_15', 'x_4_0': 'y_16', 'x_5_0': 'y_17', 'x_4_2': 'y_18'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "rename = {}\n",
-    "s = {}\n",
-    "for h in H.edges():\n",
-    "    tn = h.props['target']\n",
-    "    t = f\"x_{tn[0]}_{tn[1]}\"\n",
-    "    if t not in rename:\n",
-    "        rename[t] = f\"y_{len(rename)}\"\n",
-    "    tr = rename[t]\n",
-    "    sources = set([f\"x_{x[0]}_{x[1]}\" for x in h.elements])\n",
-    "    zources = []\n",
-    "    for z in sources:\n",
-    "        if not z in rename:\n",
-    "            rename[z] = f\"y_{len(rename)}\"\n",
-    "        zources += [rename[z]]\n",
-    "    if tr in s:\n",
-    "        s[tr] += [zources]\n",
-    "    else:\n",
-    "        s[tr] = [zources]\n",
-    "for k, v in s.items():\n",
-    "    print(f\"{k}' = \", \" + \".join([\" * \".join([vv for vv in list(x)]) for x in v]))\n",
-    "\n",
-    "print()\n",
-    "print(rename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "f799cbfd-9110-4e66-95d9-1587c5fb1435",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_5' =  x_2 * x_5 + x_3 * x_5 * x_0 * x_1 * x_2 * x_6\n",
-      "x_6' =  x_3 * x_5 * x_0 * x_1 * x_2 * x_4 * x_6\n",
-      "x_1' =  x_3 * x_2 * x_0 * x_1\n",
-      "x_7' =  x_5 * x_4 * x_1 * x_7\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = {}\n",
-    "for h in BH.edges():\n",
-    "    tn = h.props['target']\n",
-    "    tr = f\"x_{tn}\"\n",
-    "    sources = set([f\"x_{x}\" for x in h.elements])\n",
-    "    if tr in s:\n",
-    "        s[tr] += [sources]\n",
-    "    else:\n",
-    "        s[tr] = [sources]\n",
-    "for k, v in s.items():\n",
-    "    print(f\"{k}' = \", \" + \".join([\" * \".join([vv for vv in list(x)]) for x in v]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42a4c62c-a750-45da-9f4b-aec0f03e7cef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
