Added caterina and stefano

--- a/src/work-caterinaStefano.ipynb
+++ b/src/work-caterinaStefano.ipynb
@@ -8,35 +8,19 @@
    "outputs": [],
    "source": [
     "from hypergraphs import *\n",
-    "from kegg import *"
+    "from kegg import *\n",
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "199b2487",
+   "id": "6b13e6bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "superpathwayDict = {\n",
-    "    \"Carbohydrate metabolism\":\n",
-    "    [\n",
-    "        (\"00010\", \"Glycolysis / Gluconeogenesis\"),\n",
-    "        (\"00020\", \"Citrate cycle (TCA cycle)\"),\n",
-    "        (\"00030\", \"Pentose phosphate pathway\"),\n",
-    "        (\"00040\", \"Pentose and glucuronate interconversions\"),\n",
-    "        (\"00051\", \"Fructose and mannose metabolism\"),\n",
-    "        (\"00052\", \"Galactose metabolism\"),\n",
-    "        (\"00053\", \"Ascorbate and aldarate metabolism\"),\n",
-    "        (\"00500\", \"Starch and sucrose metabolism\"),\n",
-    "        (\"00520\", \"Amino sugar and nucleotide sugar metabolism\"),\n",
-    "        (\"00620\", \"Pyruvate metabolism\"),\n",
-    "        (\"00630\", \"Glyoxylate and dicarboxylate metabolism\"),\n",
-    "        (\"00640\", \"Propanoate metabolism\"),\n",
-    "        (\"00650\", \"Butanoate metabolism\"),\n",
-    "        (\"00562\", \"Inositol phosphate metabolism\")\n",
-    "    ]\n",
-    "}\n",
+    "inputDirectory = \"/Users/boldi/Desktop/data/\"\n",
     "organismDict = {\"hsa\": \"Homo sapiens (human)\"}\n",
     "outputDirectory = \"/Users/boldi/Desktop/pw/\"\n",
     "dataDirectory = \"../../LaTeX/Data/KEGG-Pathways/hsa\""
@@ -45,17 +29,40 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8defe1fd",
+   "id": "3e6caae5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "organism = \"hsa\"\n",
-    "superpathway = \"Carbohydrate metabolism\""
+    "pws = pd.read_csv(os.path.join(inputDirectory, \"KEGG-pathways.txt\"), header=0, \n",
+    "            names=[\"Pathway ID\", \"Pathway type\", \"Pathway name\"], dtype=\"string\", keep_default_na=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "199b2487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "superpathwayDict = {\n",
+    "    \"Involved\": [(x,y) for x,y in zip(pws[\"Pathway ID\"], pws[\"Pathway name\"])]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bce1e1d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "superpathway = \"Involved\"\n",
+    "organism = \"hsa\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "cb8e2d96",
    "metadata": {},
    "outputs": [],
@@ -65,21 +72,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 140,
+   "id": "3f48d886",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio.KEGG.KGML.KGML_parser import read\n",
+    "\n",
+    "pathway = KGML_parser.read(kegg_get(\"hsa04510\", \"kgml\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "47a38c39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = set([])\n",
+    "for p in superpathwayDict[superpathway]:\n",
+    "    pathway = KGML_parser.read(kegg_get(organism+p[0], \"kgml\"))\n",
+    "    a = a | set([str((relation.type, relation.subtypes)) for relation in pathway.relations])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "0a11bbae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"('PPrel', [('phosphorylation', '+p'), ('indirect effect', '..>')])\", \"('PPrel', [('state change', '...')])\", \"('GErel', [('expression', '-->')])\", \"('PCrel', [('activation', '-->')])\", \"('PPrel', [('inhibition', '--|'), ('indirect effect', '..>')])\", \"('PCrel', [('inhibition', '--|')])\", \"('PCrel', [('activation', '-->'), ('indirect effect', '..>')])\", \"('PPrel', [('compound', 277), ('activation', '-->')])\", \"('PPrel', [('compound', 24)])\", \"('PPrel', [('compound', 25)])\", \"('PPrel', [('inhibition', '--|'), ('dephosphorylation', '-p')])\", \"('PPrel', [])\", \"('PPrel', [('inhibition', '--|')])\", \"('PCrel', [('indirect effect', '..>')])\", \"('PCrel', [('inhibition', '--|'), ('dephosphorylation', '-p')])\", \"('PPrel', [('indirect effect', '..>')])\", \"('ECrel', [('compound', 170), ('activation', '-->'), ('indirect effect', '..>')])\", \"('PPrel', [('inhibition', '--|'), ('phosphorylation', '+p')])\", \"('PPrel', [('activation', '-->'), ('indirect effect', '..>')])\", \"('PPrel', [('binding/association', '---')])\", \"('PPrel', [('activation', '-->')])\", \"('PPrel', [('activation', '-->'), ('phosphorylation', '+p')])\", \"('PPrel', [('phosphorylation', '+p')])\", \"('PPrel', [('inhibition', '--|'), ('ubiquitination', '+u')])\", \"('PPrel', [('activation', '-->'), ('dephosphorylation', '-p')])\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "00ce398f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[103], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(pathway\u001b[38;5;241m.\u001b[39mentries[\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpathway\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelations\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mentry2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcomponents\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mid]\u001b[38;5;241m.\u001b[39mname)   \u001b[38;5;66;03m# Alpha-1\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(pathway\u001b[38;5;241m.\u001b[39mentries[\u001b[38;5;28mlist\u001b[39m(pathway\u001b[38;5;241m.\u001b[39mrelations[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mentry2\u001b[38;5;241m.\u001b[39mcomponents)[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mid]\u001b[38;5;241m.\u001b[39mname)   \u001b[38;5;66;03m# Beta-5\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "print(pathway.entries[list(pathway.relations[0].entry2.components)[0].id].name)   # Alpha-1\n",
+    "print(pathway.entries[list(pathway.relations[0].entry2.components)[1].id].name)   # Beta-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "c96b4fec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hsa:5290 hsa:5291 hsa:5293 hsa:5295 hsa:5296 hsa:8503'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pathway.relations[1].entry1.name   # Collagens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "0ad52b1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[105], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(pathway\u001b[38;5;241m.\u001b[39mentries[\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpathway\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrelations\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mentry2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcomponents\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mid]\u001b[38;5;241m.\u001b[39mname)   \u001b[38;5;66;03m# Alpha-9\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(pathway\u001b[38;5;241m.\u001b[39mentries[\u001b[38;5;28mlist\u001b[39m(pathway\u001b[38;5;241m.\u001b[39mrelations[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mentry2\u001b[38;5;241m.\u001b[39mcomponents)[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mid]\u001b[38;5;241m.\u001b[39mname)   \u001b[38;5;66;03m# Beta-1\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "print(pathway.entries[list(pathway.relations[1].entry2.components)[0].id].name)   # Alpha-9\n",
+    "print(pathway.entries[list(pathway.relations[1].entry2.components)[1].id].name)   # Beta-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "03c817e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entry node ID: 84\n",
+      "Names: hsa:1277 hsa:1278 hsa:1280 hsa:1282 hsa:1284 hsa:1285 hsa:1286 hsa:1287 hsa:1288 hsa:1291 hsa:1292 hsa:1293 hsa:1297 hsa:1298 hsa:1299 hsa:131873 hsa:256076\n",
+      "Type: gene\n",
+      "Components: set()\n",
+      "Reactions: \n",
+      "Graphics elements: 1 [<Bio.KEGG.KGML.KGML_pathway.Graphics object at 0x140dea910>]\n",
+      "\n",
+      "Entry node ID: 31\n",
+      "Names: hsa:10319 hsa:22798 hsa:284217 hsa:3908 hsa:3909 hsa:3910 hsa:3911 hsa:3912 hsa:3913 hsa:3914 hsa:3915 hsa:3918\n",
+      "Type: gene\n",
+      "Components: set()\n",
+      "Reactions: \n",
+      "Graphics elements: 1 [<Bio.KEGG.KGML.KGML_pathway.Graphics object at 0x144ebd2e0>]\n",
+      "\n",
+      "Entry node ID: 66\n",
+      "Names: hsa:6696\n",
+      "Type: gene\n",
+      "Components: set()\n",
+      "Reactions: \n",
+      "Graphics elements: 1 [<Bio.KEGG.KGML.KGML_pathway.Graphics object at 0x140dc8640>]\n",
+      "\n",
+      "Entry node ID: 57\n",
+      "Names: hsa:3371 hsa:63923 hsa:7143 hsa:7148\n",
+      "Type: gene\n",
+      "Components: set()\n",
+      "Reactions: \n",
+      "Graphics elements: 1 [<Bio.KEGG.KGML.KGML_pathway.Graphics object at 0x140dd06a0>]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for relation in pathway.relations:\n",
+    "    components = list(relation.entry2.components)\n",
+    "    if {pathway.entries[component.id].name for component in components}=={'hsa:3680', 'hsa:3688'}:\n",
+    "        print(pathway.entries[relation.entry1.id])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "2316bcd8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/boldi/.local/share/virtualenvs/HyperFibrations-l1h_g1LE/lib/python3.9/site-packages/hypernetx/classes/hypergraph.py:968: UserWarning: Cannot add edge. Edge already in hypergraph\n",
-      "  warnings.warn(\"Cannot add edge. Edge already in hypergraph\")\n"
+      "../../LaTeX/Data/KEGG-Pathways/hsa/hsa04510-sbml.xml\n",
+      "../../LaTeX/Data/KEGG-Pathways/hsa/hsa04151-sbml.xml\n",
+      "../../LaTeX/Data/KEGG-Pathways/hsa/hsa04970-sbml.xml\n",
+      "../../LaTeX/Data/KEGG-Pathways/hsa/hsa04974-sbml.xml\n",
+      "../../LaTeX/Data/KEGG-Pathways/hsa/hsa04066-sbml.xml\n",
+      "../../LaTeX/Data/KEGG-Pathways/hsa/hsa05146-sbml.xml\n",
+      "../../LaTeX/Data/KEGG-Pathways/hsa/hsa04145-sbml.xml\n",
+      "../../LaTeX/Data/KEGG-Pathways/hsa/hsa04611-sbml.xml\n"
      ]
     }
    ],
    "source": [
     "H, sr2r, r2ss, rid2rname, mid2mname = read_hg_from_SBML([os.path.join(f\"{dataDirectory}\", f\"{organism}{x[0]}-sbml.xml\") for x in superpathwayDict[superpathway]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a9cd7f22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2ss"
    ]
   },
   {
