--- a/src/work-caterinaStefano.ipynb
+++ b/src/work-caterinaStefano.ipynb
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5ba010c9",
+   "id": "751bc16c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ef7258b1",
+   "id": "05b96661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0daf41d4",
+   "id": "ff9e60e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "514669b9",
+   "id": "7edf9109",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "b6951481",
+   "id": "73ce2fd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "72de16f8",
+   "id": "17ab34ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "1dd318b6",
+   "id": "c3075b43",
    "metadata": {},
    "outputs": [
     {
@@ -1009,15 +1009,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "33bf8d7d",
+   "execution_count": 160,
+   "id": "972a3366",
    "metadata": {},
    "outputs": [],
    "source": [
     "reltaus = []\n",
     "unreltaus = []\n",
     "\n",
-    "for i in range(1000000):\n",
+    "for i in range(100000):\n",
     "    gene1 = random.choice(usableColumns)\n",
     "    gene2 = random.choice(usableColumns)\n",
     "    expr1 = genes.loc[:,gene1].values.tolist()\n",
@@ -1031,53 +1031,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab86c34e",
+   "execution_count": 161,
+   "id": "39eeffee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  0\n",
+      "count  10150.000000\n",
+      "mean       0.030742\n",
+      "std        0.201300\n",
+      "min       -0.563492\n",
+      "25%       -0.085317\n",
+      "50%        0.018849\n",
+      "75%        0.114300\n",
+      "max        1.000000\n"
+     ]
+    }
+   ],
    "source": [
     "print(pd.DataFrame(reltaus).describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d0893e20",
+   "execution_count": 162,
+   "id": "9864a3a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  0\n",
+      "count  89850.000000\n",
+      "mean       0.011626\n",
+      "std        0.164281\n",
+      "min       -0.627976\n",
+      "25%       -0.094246\n",
+      "50%        0.006944\n",
+      "75%        0.112103\n",
+      "max        0.740079\n"
+     ]
+    }
+   ],
    "source": [
     "print(pd.DataFrame(unreltaus).describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "1d95abb3",
+   "execution_count": 165,
+   "id": "cf538b90",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"None of [Index(['GSM1574423', 'GSM1574424', 'GSM1574425', 'GSM1574426', 'GSM1574427',\\n       'GSM1574428', 'GSM1574429', 'GSM1574430', 'GSM1574431', 'GSM1574432',\\n       'GSM1574433', 'GSM1574434', 'GSM1574435', 'GSM1574436', 'GSM1574437',\\n       'GSM1574438', 'GSM1574439', 'GSM1574440', 'GSM1574441', 'GSM1574442',\\n       'GSM1574443', 'GSM1574444', 'GSM1574445', 'GSM1574446', 'GSM1574447',\\n       'GSM1574448', 'GSM1574449', 'GSM1574450', 'GSM1574451', 'GSM1574452',\\n       'GSM1574453', 'GSM1574454', 'GSM1574455', 'GSM1574456', 'GSM1574457',\\n       'GSM1574458', 'GSM1574459', 'GSM1574460', 'GSM1574461', 'GSM1574462',\\n       'GSM1574463', 'GSM1574464', 'GSM1574465', 'GSM1574466', 'GSM1574467',\\n       'GSM1574468', 'GSM1574469', 'GSM1574470', 'GSM1574471', 'GSM1574472',\\n       'GSM1574473', 'GSM1574474', 'GSM1574475', 'GSM1574476', 'GSM1574477',\\n       'GSM1574478', 'GSM1574479', 'GSM1574480', 'GSM1574481', 'GSM1574482',\\n       'GSM1574483', 'GSM1574484', 'GSM1574485', 'GSM1574486'],\\n      dtype='object')] are in the [columns]\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[141], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m genes[\u001b[43mclassification\u001b[49m\u001b[43m[\u001b[49m\u001b[43mgenes\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mname\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m==\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhealthy\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/HyperFibrations-l1h_g1LE/lib/python3.9/site-packages/pandas/core/frame.py:3767\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3765\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3766\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 3767\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m   3769\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3770\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/HyperFibrations-l1h_g1LE/lib/python3.9/site-packages/pandas/core/indexes/base.py:5876\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   5873\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   5874\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 5876\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   5878\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[1;32m   5879\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[1;32m   5880\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/HyperFibrations-l1h_g1LE/lib/python3.9/site-packages/pandas/core/indexes/base.py:5935\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   5933\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m use_interval_msg:\n\u001b[1;32m   5934\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 5935\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   5937\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m   5938\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mKeyError\u001b[0m: \"None of [Index(['GSM1574423', 'GSM1574424', 'GSM1574425', 'GSM1574426', 'GSM1574427',\\n       'GSM1574428', 'GSM1574429', 'GSM1574430', 'GSM1574431', 'GSM1574432',\\n       'GSM1574433', 'GSM1574434', 'GSM1574435', 'GSM1574436', 'GSM1574437',\\n       'GSM1574438', 'GSM1574439', 'GSM1574440', 'GSM1574441', 'GSM1574442',\\n       'GSM1574443', 'GSM1574444', 'GSM1574445', 'GSM1574446', 'GSM1574447',\\n       'GSM1574448', 'GSM1574449', 'GSM1574450', 'GSM1574451', 'GSM1574452',\\n       'GSM1574453', 'GSM1574454', 'GSM1574455', 'GSM1574456', 'GSM1574457',\\n       'GSM1574458', 'GSM1574459', 'GSM1574460', 'GSM1574461', 'GSM1574462',\\n       'GSM1574463', 'GSM1574464', 'GSM1574465', 'GSM1574466', 'GSM1574467',\\n       'GSM1574468', 'GSM1574469', 'GSM1574470', 'GSM1574471', 'GSM1574472',\\n       'GSM1574473', 'GSM1574474', 'GSM1574475', 'GSM1574476', 'GSM1574477',\\n       'GSM1574478', 'GSM1574479', 'GSM1574480', 'GSM1574481', 'GSM1574482',\\n       'GSM1574483', 'GSM1574484', 'GSM1574485', 'GSM1574486'],\\n      dtype='object')] are in the [columns]\""
-     ]
+     "data": {
+      "text/plain": [
+       "KstestResult(statistic=0.03111831158115197, pvalue=2.0866789228662175e-08, statistic_location=0.00546041352661954, statistic_sign=-1)"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "genes[classification[genes[\"name\"]]==\"healthy\"]"
+    "scipy.stats.ks_2samp(reltaus, unreltaus, alternative=\"less\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "836f98d0",
+   "id": "68eebefc",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38a6615",
+   "id": "d96c20dd",
    "metadata": {},
    "outputs": [],
    "source": []
